--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
   <!-- Seção de Benefícios -->
   <section class="beneficios">
     <div class="card">
-      <img src="https://s2.glbimg.com/pFfZZ9FNCoq1CbiySloMcgpj5ZU=/smart/e.glbimg.com/og/ed/f/original/2019/07/08/batom-vermelho-rouge-allure-in-passion-chanel.jpg" alt="Batom">
+      <img src="https://images.tcdn.com.br/img/img_prod/432830/batom_liquido_04_839_1_50968a991974006a34f8f0c6e6bbad92.jpg" alt="Batom">
       <p>Batom de longa duração</p>
     </div>
     <div class="card">
-      <img src="imagens/vegano.png" alt="Vegano">
+      <img src="https://static.vecteezy.com/ti/vetor-gratis/p1/6020951-rosa-folhas-planta-vetor.jpg" alt="Vegano">
       <p>Maquiagem vegana e cruelty-free</p>
     </div>
     <div class="card">
